sumo/tests/sumo/extended/calibrator/errors/vClass_mismatch_ignore/options.sumo
-n net.net.xml --no-step-log -a input_additional.add.xml --tripinfo-output
tripinfos.xml -e 100 --ignore-route-errors
